tests/invalid/garbage.s
_start:
qwgxyfuwnfxguiwnfi
uiwfe

uiwfe
